# Image-parsers

./: .gitignore  main.py  parser.py  pyproject.toml
parsers/: citilink_client.py  client.py  eldorado_client.py  mts_client.py  sbermegamarket_client.py  technopark_client.py  test.py
